# timecard.ru-admin

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  README.md
.github/actions/spelling/: expect.txt
.github/workflows/: qa.yml  release-deployment.yml  sast.yml  spell_check.yml
CMakeModules/: FindLibAVCodec.cmake  FindLibAVFormat.cmake  FindLibAVUtil.cmake  FindLibArchive.cmake  FindLibHPDF.cmake  FindLibImageMagick.cmake  FindLibMaxMindDB.cmake  FindLibRapidJSON.cmake  FindLibSSL.cmake  FindLibSwScale.cmake  FindLibWebSockets.cmake  FindLibWkhtmlToX.cmake  FindLibXL.cmake  FindLibZ.cmake
po/: CMakeLists.txt  ru.pot  update_pot
src/: CMakeLists.txt
src/admin/: CMakeLists.txt  admin.cpp
src/admin/include/: admin.h
supplemental/ci-scripts/: CMakeLists.txt  ci.sql  mysql_provisioning.in  pre.sql.in
supplemental/config/: CMakeLists.txt  data_type.in  db_field_name_photo_filename.in  db_field_name_photo_folder.in  db_is_item_allowed_to_change.in  db_select_all_by_id.in  db_update_logo_by_id.in  default_action.in  file_extension.in  guest_allowed_actions.in  image_folders.in  image_max_height.in  image_max_width.in  max_file_size.in  number_of_folders.in
supplemental/docker/prod/: Dockerfile
supplemental/docker/qa/: Dockerfile  Dockerfile_sql  dump.sql  run.sh
supplemental/git/: CMakeLists.txt  git_commit.pl
supplemental/ssmtp/: CMakeLists.txt  ssmtp.conf.in
templates/: CMakeLists.txt
templates/ru/pages/admin/: admin_chat_get_cnx_list.htmlt  admin_chat_get_presence_cache.htmlt  admin_get_book_complains_list.htmlt  admin_get_book_list.htmlt  admin_get_certificates_list.htmlt  admin_get_companies_duplicates.htmlt  admin_get_companies_list.htmlt  admin_get_complains_list.htmlt  admin_get_courses_list.htmlt  admin_get_languages_list.htmlt  admin_get_localities_list.htmlt  admin_get_occupations_list.htmlt  admin_get_pictures_lostindb.htmlt  admin_get_recommendation_adverse.htmlt  admin_get_regions_list.htmlt  admin_get_schools_list.htmlt  admin_get_universities_list.htmlt  admin_get_user_list.htmlt  admin_index.htmlt  adminheader.htmlt  adminindex.htmlt  adminuseredit.htmlt
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  autotest_c_bt_expense_template.cpp  autotest_c_price_spelling.cpp  autotest_utilities_c_float.cpp  autotest_utilities_c_price_spelling.cpp  autotest_utilities_date.cpp  autotest_utilities_db_basic.cpp  autotest_utilities_declension.cpp  autotest_utilities_http_params.cpp  autotest_utilities_http_params_timecard.cpp  autotest_utilities_rus_to_lower.cpp
tests/selenium/: login.py
wkhtmltox/: readme
